# vmlab

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  HANDOFF-agent-terminals.md  README.md  comments.wcl  compose.yaml  justfile
.claude/skills/verify/: SKILL.md
.claude/skills/vmlab/: SKILL.md
.claude/skills/vmlab/reference/: cli.md  container.md  host-config.md  lab-config.md  oci.md  templates.md  wisp-api.md  wisp-language.md
.claude/skills/vmlab/references/: cli_ref.md  concept_architecture.md  concept_automation_overview.md  concept_containers.md  concept_daemon_model.md  concept_fastpath.md  concept_host_config.md  concept_lab_containers.md  concept_playbooks.md  concept_provisions.md  concept_start_here.md  concept_template_builds.md  concept_web_console.md  concept_wsl2.md  entity_container_api.md  entity_container_block.md  entity_event_type.md  entity_exec_result_type.md  entity_lab_api.md  entity_labs.md  entity_match_type.md  entity_media.md  entity_nic_block.md  entity_on_handler.md  entity_playbook_block.md  entity_provision_block.md  entity_seg_api.md  entity_segment_block.md  entity_shares.md  entity_template_block.md  entity_template_sources.md  entity_vm_api.md  entity_vmlab_agent.md  entity_vmlab_web.md  entity_vms.md  (+11 more)
.claude/skills/wcl/: SKILL.md
.claude/skills/wdoc/: SKILL.md
.claude/skills/wskill/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml
docker/: README.md
docker/config-weave/: .gitignore  README.md
docker/lab/: vmlab.wcl
docker/labs/ad-demo/: vmlab.wcl
docs/: handoff-fabric-gateway-tcp-bug.md  main.wcl  vmlab-prd.md
docs/pages/vmlab/: getting-started.wcl  home-template.wcl  index.wcl  landing-parts.wcl
docs/wskills/vmlab/: comments.wcl  justfile  wskill.wcl
ebpf/: Cargo.toml  rust-toolchain.toml
ebpf/fastpath-logic/: Cargo.toml
ebpf/fastpath-logic/src/: lib.rs
ebpf/fastpath-sockmap/: Cargo.toml
ebpf/fastpath-sockmap/src/: main.rs
ebpf/xdp-switch/: Cargo.toml
ebpf/xdp-switch/src/: main.rs
examples/ad-lab/: vmlab.wcl
examples/alpine-arm64/: README.md
examples/alpine-arm64/scripts/: setup.ws
examples/alpine-registry/: README.md  vmlab.wcl
examples/alpine-registry/scripts/: setup.ws
examples/mixed-lab/: README.md  vmlab.wcl
examples/peer-a/: vmlab.wcl
examples/peer-a/scripts/: setup.ws
examples/peer-b/: vmlab.wcl
examples/peer-b/scripts/: setup.ws
examples/riscv64-ubuntu/: README.md
examples/riscv64-ubuntu/scripts/: setup.ws
examples/templates/almalinux-10/: vmlab.wcl
examples/templates/arch/: vmlab.wcl
examples/templates/fedora-44/: README.md  vmlab.wcl
examples/templates/opensuse-leap-16.0/: README.md  vmlab.wcl
examples/templates/opensuse-tumbleweed/: README.md  vmlab.wcl
examples/templates/ubuntu-26.04/: vmlab.wcl
examples/templates/windows-server-2025/: README.md  fetch-deps.sh
examples/winsrv-desktop/: README.md  vmlab.wcl
guest/: .gitignore  build-agent.sh  build-asset.sh
guest/agent/: Cargo.toml
guest/agent-proto/: Cargo.toml
guest/agent-proto/src/: lib.rs
guest/agent/src/: exec.rs  files.rs  linux.rs  main.rs  metrics.rs  mux.rs  sessions_test.rs  tail.rs  testutil.rs  windows.rs
guest/agent/src/windows/: clipboard.rs  conpty.rs  eventlog.rs  metrics.rs  mod.rs  port.rs  service.rs  sysinfo.rs
guest/cinit/: Cargo.toml
guest/cinit-proto/: Cargo.toml
guest/cinit-proto/src/: lib.rs
guest/cinit/src/: cmdline.rs  container.rs  ctl.rs  health.rs  main.rs  mounts.rs  net.rs  reap.rs  sig.rs  tty.rs  users.rs  util.rs
src/: agent_asset.rs  guest_asset.rs  lab_init.rs  lib.rs  lifecycle.rs  logs.rs  main.rs  paths.rs  viewer.rs  vnc.rs
src/cli/: console.rs  daemon.rs  lab.rs  mod.rs  tty_attach.rs  validate.rs
src/config/: dto.rs  edit_ops.rs  extract.rs  host.rs  host_schema.wcl  mod.rs  model.rs  schema.wcl  validate.rs
src/labd/: container.rs  container_ctl.rs  lab.rs  mod.rs  netservices.rs  network.rs  playbook.rs  state.rs  vm.rs  vm_agent.rs
src/media/: cache.rs  mod.rs
src/net/: dhcp.rs  dns.rs  frame.rs  gateway.rs  mod.rs  rules.rs  switch.rs
src/net/fastpath/: afxdp.rs  mod.rs  priv_tests.rs  probe.rs  sockmap.rs  stub.rs
src/net/nat/: forward.rs  icmp.rs  mod.rs  tests.rs  udp.rs  vtcp.rs
src/oci/: auth.rs  catalog.rs  client.rs  config_blob.rs  manifest.rs  media_types.rs  mod.rs
src/oci/image/: cache.rs  flatten.rs  mod.rs  model.rs  pull.rs  reference.rs
src/profiles/: mod.rs  profile_schema.wcl  shipped.wcl
src/qemu/: cmdline.rs  container.rs  mod.rs  process.rs  resolve.rs  virtiofsd.rs
src/qga/: mod.rs  tests.rs
src/qmp/: client.rs  mod.rs  tests.rs  types.rs
src/scripting/: interact.rs  keymap.rs  mod.rs  runner.rs  terminal.rs
src/smb/: config.rs  mod.rs  mount.rs  server.rs
src/supervisor/: global.rs  mod.rs  templates.rs
src/template/: agent_install.rs  artefact.rs  bootstrap.rs  build.rs  cli.rs  meta.rs  meta_schema.wcl  mod.rs  oci_bridge.rs  qimg.rs  registries.rs  store.rs
src/template/bootstrap/: install.cmd  install.sh
src/vision/: mod.rs  ocr.rs
src/web/: api.rs  auth.rs  desktop.rs  editor.rs  events.rs  files.rs  fsops.rs  help.rs  logs.rs  main.rs  pkgs.rs  playbooks.rs  state.rs  tty.rs  vnc.rs  webpages.rs
tap/: Cargo.toml
tap/src/: lib.rs
web-ui/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web-ui/src/: App.tsx  api.ts  app.css  fx.ts  index.tsx  registries.ts  store.ts  theme.css  wcl-language.ts  wscript-language.ts
web-ui/src/components/: ActionButton.tsx  ConfigView.tsx  ConsoleScreen.tsx  ContainerView.tsx  FileTree.tsx  FilesView.tsx  GuestStats.tsx  LabView.tsx  LogPanel.tsx  Login.tsx  LogsView.tsx  MachinePullStatus.tsx  MachineView.tsx  NetworkView.tsx  NewLabModal.tsx  PkgReposModal.tsx  PkgSearchModal.tsx  PlaybookEditorView.tsx  PlaybookPanel.tsx  PowerButton.tsx  Sidebar.tsx  SidebarNav.tsx  TemplatesView.tsx  TerminalPanel.tsx  Topbar.tsx  VncScreen.tsx  WebView.tsx  dialogs.tsx  icons.tsx
web-ui/src/editor/: bytesize.ts  fields.ts  layout.ts  model.ts  ops.ts  store.ts
(+273 files in other folders)
