[package]
name = "vmlab"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Single-host virtual machine lab orchestrator"

[lib]
name = "vmlab"
path = "src/lib.rs"

# The CLI binary (supervisor + lab daemons ride along as hidden subcommands).
[[bin]]
name = "vmlab"
path = "src/main.rs"

# The web UI server — only built with `--features web`.
[[bin]]
name = "vmlab-web"
path = "src/web/main.rs"
required-features = ["web"]

[features]
default = []
# Pulls in the HTTP stack for the `vmlab-web` binary. Kept optional so a plain
# CLI build stays lean.
web = [
    "dep:actix-web",
    "dep:actix-ws",
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:argon2",
    "dep:forge-core",
]

[dependencies]
actix-web = { version = "4", optional = true }
actix-ws = { version = "0.3", optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
argon2 = { version = "0.5", optional = true, features = ["std"] }
# The Forge desktop-widget session engine: server-side RFB decode → RGBA rect
# frames for the console UI's DesktopViewer (docs/widgets-protocol.md there).
forge-core = { git = "https://github.com/wiltaylor/forge.git", rev = "58f33b526285aaef278198871852fdb9b27b999c", features = ["vnc"], optional = true }
wcl_lang = { git = "https://github.com/wiltaylor/wcl.git", rev = "cc63fcca0412082399e4e80a78caf6d6b18bb44e" }
wscript = { git = "https://github.com/Configweave/wscript.git", rev = "fcd51236239225ea3e89a82fec44d30f7b871426" }

anyhow = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
zstd = "0.13"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["process", "signal", "user", "fs"] }
image = { version = "0.25", default-features = false, features = ["png", "pnm", "bmp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tar = "0.4"
glob = "0.3"
ipnet = "2.12.0"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
# test-util enables tokio::time::{pause, advance} for clock-driven expiry tests.
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "warn"
dbg_macro = "warn"
