[package]
name = "vmlab"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Single-host virtual machine lab orchestrator"
# guest/ holds the micro-VM guest-side crates and build assets; only
# guest/cinit-proto is consumed here (as a path dependency below). The rest —
# notably guest/cinit, which is musl-only and allows unsafe — must never be
# swept into this package. ebpf/ is the BPF fast-path workspace (nightly +
# bpf-linker, allows unsafe); only its committed objects under
# src/net/fastpath/bpf/ are consumed here. tap/ is the TAP-ioctl helper
# (allows unsafe), consumed as a path dependency behind the ebpf feature.
exclude = ["/guest", "/ebpf", "/tap"]

[lib]
name = "vmlab"
path = "src/lib.rs"

# The CLI binary (supervisor + lab daemons ride along as hidden subcommands).
[[bin]]
name = "vmlab"
path = "src/main.rs"

# The web UI server — only built with `--features web`.
[[bin]]
name = "vmlab-web"
path = "src/web/main.rs"
required-features = ["web"]

[features]
default = ["ebpf"]
# The eBPF network fast path (PRD §9.1's substitutable backend): compiled in
# by default; an empirical probe at daemon startup decides per-host whether a
# kernel tier is actually used, falling back to the userspace fabric.
ebpf = ["dep:aya", "dep:vmlab-tap", "dep:command-fds"]
# Pulls in the HTTP stack for the `vmlab-web` binary. Kept optional so a plain
# CLI build stays lean.
web = [
    "dep:actix-web",
    "dep:actix-ws",
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:argon2",
    "dep:forge-core",
]

[dependencies]
actix-web = { version = "4", optional = true }
actix-ws = { version = "0.3", optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
argon2 = { version = "0.5", optional = true, features = ["std"] }
# The Forge desktop-widget session engine: server-side RFB decode → RGBA rect
# frames for the console UI's DesktopViewer (docs/widgets-protocol.md there).
forge-core = { git = "https://github.com/wiltaylor/forge.git", rev = "c634d1bda814f6ee1469c6b647633c05b8434875", features = ["vnc"], optional = true }
wcl_lang = { git = "https://github.com/wiltaylor/wcl.git", rev = "89a49e42258e9d3e4ead31ca9de3d25f7ccfde19" }
wscript = { git = "https://github.com/Configweave/wscript.git", rev = "fcd51236239225ea3e89a82fec44d30f7b871426" }
# Host <-> micro-VM init contract (container.json + the ctl channel) for OCI
# containers in labs. Shared with the guest init (guest/cinit); plain serde,
# so it builds for the host like any other dependency.
vmlab-cinit-proto = { path = "guest/cinit-proto" }

anyhow = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
socket2 = "0.6"
futures = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
zstd = "0.13"
flate2 = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
# `net` is for if_nametoindex (the afxdp tier's XDP map keys).
nix = { version = "0.29", features = ["process", "signal", "user", "fs", "net"] }
image = { version = "0.25", default-features = false, features = ["png", "pnm", "bmp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tar = "0.4"
glob = "0.3"
tempfile = "3"
ipnet = "2.12.0"
async-trait = "0.1.89"
# `net` is for sockopt::socket_cookie (SO_COOKIE), the sockmap fast path's
# per-socket BPF map key.
rustix = { version = "1.1.4", features = ["termios", "net"] }
# The eBPF loader for the network fast path. Its userspace API is safe, so
# the crate-level `unsafe_code = "deny"` holds.
aya = { version = "0.14", optional = true }
# TAP creation for the afxdp tier (the unsafe ioctls live in that crate).
vmlab-tap = { path = "tap", optional = true }
# Passes pre-opened tap fds to QEMU at spawn (dup2 shuffle in pre_exec).
command-fds = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# test-util enables tokio::time::{pause, advance} for clock-driven expiry tests.
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "warn"
dbg_macro = "warn"
