# vmlab-cinit — PID 1 of an OCI-container micro-VM. Built as a static musl
# binary (x86_64-unknown-linux-musl / aarch64-unknown-linux-musl) and packed
# into the guest initramfs by ../build-asset.sh. Deliberately NOT part of the
# main crate's build: it is a guest-only binary and (unlike the main crate)
# may use `unsafe` where PID-1 work demands it (fork/exec).

[package]
name = "vmlab-cinit"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "PID 1 for vmlab OCI-container micro-VMs"

[[bin]]
name = "vmlab-cinit"
path = "src/main.rs"

[dependencies]
vmlab-cinit-proto = { path = "../cinit-proto" }
serde_json = "1"
libc = "0.2"
nix = { version = "0.29", features = [
    "mount",
    "process",
    "signal",
    "user",
    "fs",
    "reboot",
    "hostname",
    "term",
    "ioctl",
    "sched",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"

[lints.clippy]
todo = "warn"
dbg_macro = "warn"

# Standalone: never built as part of the host crate.
[workspace]
